# ccf_person_identification

./: CMakeLists.txt  install.sh  package.xml
include/ccf_person_identification/: person_classifier.hpp
include/ccf_person_identification/body/: body_classifier.hpp  cnn_channel_extractor.hpp  cnn_channel_extractor_gpu.hpp
include/kkl/cvk/: cvutils.hpp  icf_channel_bank.hpp  icf_channel_extractor.hpp
