<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ccf_person_identification</name>
  <version>0.0.0</version>
  <description>The ccf_person_identification package</description>

  <maintainer email="koide@dei.unipd.it">koide</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>cv_bridge</depend>
  <!-- <depend>open_face_recognition</depend> -->

  <export>
  </export>
</package>
